smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-with-invalid-key.smithy
// Syntax error at line 2, column 2: Unexpected character: '!' | Model
$!foo: "1.0"
